<resources>
    <string name="app_name">TicTacToe</string>
    <string name="start">Start</string>
    <string name="exit">Exit</string>
    <string name="dialog_message">Do you wish to play again?</string>
    <string name="dialog_title">Game Over</string>
    <string name="dialog_positive_message">Yes</string>
    <string name="dialog_negative_message">No</string>
    <string name="player_1">Player 1</string>
    <string name="x">X</string>
    <string name="player_2">Player 2</string>
    <string name="y">Y</string>
    <string name="o">O</string>
    <string name="welcome_to_tick_tac_toe">Welcome to Tick Tac Toe</string>
    <string name="p1">P1</string>
    <string name="p2">P2</string>
    <string name="game_over">Game Over</string>
    <string name="play_again_text">Do you wish to play again?</string>
</resources>
